app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
/* Custom bootstrap variables must be set or imported *before* bootstrap. */
@import "bootstrap";
/* Import scss content */
@import "**/*";


@-webkit-keyframes AnimationName {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@-moz-keyframes AnimationName {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@keyframes AnimationName { 
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}

// --------------- HEADER NAV BAR STYLING ---------------
body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}
.homepage h1 {
    font-weight: bolder;
}
.homepage h1 a {
    color: black;
}
header.homepage {
    text-align: center;
    background: linear-gradient(270deg, #86edd2, #c286ed, #f898ff);
    background-size: 600% 600%;
    padding-bottom: .5rem;
    padding-top: 1rem;
    -webkit-animation: AnimationName 7s ease infinite;
    -moz-animation: AnimationName 7s ease infinite;
    animation: AnimationName 7s ease infinite;
}

header ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
nav li {
    margin-right: 10px;
    margin-left: 10px; 
}
nav li a{
    color: white;
}

a:hover {
    text-decoration: none;
}


nav div.right-nav {
    
    padding-top: .5rem;
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
}
nav div.left-nav {
    padding-top: .5rem;
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

div#separation-line {
    background-color:black;
    height: 2rem;
}

footer {
    text-align: center;
    font-size: 8px;
    margin-top: 1rem;
}
// --------------- HOMEPAGE STYLING ---------------
main.root {
    text-align: center;
}
.root h3 {
    padding-top: 2rem;
}
.root h6 {
    padding-top: 2rem;
}

// ---------- Product index page stylying --------

.product-container {
    // width: 60vw;
    // height: 100vh;
    width: 100%;
    height: 100%;
    margin-right: 20px;
  
    display: grid;
    grid-template: 15% auto / .6fr 3fr;
  }

.product-container header {
    margin-top: 2%;
    margin-bottom: 2%;
    grid-column: auto / span 2;
    text-align: center;
    height: 130px;
}
.product-container header h1 {
    text-align: center;
}

.product-container nav {
    grid-row: auto / span 2;
    margin-left: 1em;
    margin-right: 1em;
}
.product-container nav p {
    margin: 0;
    padding-right: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
}
.product-container .products {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-left;

}
.product-container .products a {
    color: darkolivegreen;
}
.product-container .product-item {
    padding: 10px;
    margin: 5px;
    border: 1px grey solid;
    background: paleturquoise;
    border-radius: 5px;
    max-width: 276px;
}
.product-container .product-item p {
    margin-bottom: 1px;
}
.product-page-image {
    width: 250px;
    height: 230px;
}

// ---------- Product show page stylying --------
.product-show-container {
    margin-top: 50px;
    display: grid;
    grid-template: 1fr / 1fr 1fr;
}
.product-show-container #product-image {
    grid-column: 1;
    grid-row: 1;
    height: 500px;
    width: 400px;
    padding: 10px;
    margin-top: 10px;
    margin-left: 30%;
    margin-right: 20px;
}
.product-show-container .product-details {
    grid-column: 2;
    display: flex;
    flex-direction: column;
}
.product-show-container .product-details h4 {
    margin-top: 50px;
}
.product-show-container .product-details p {
    margin-bottom: 5px;
}
.product-show-container .product-details .product-description {
    font-style: italic;
}

// ---------- Merchant show page stylying --------
.merchant-products-container {
}
.merchant-products-container .heading {
    grid-column: 2;
    grid-row: 1;

    text-align: center;
    margin-top: 50px;
}
.merchant-products-container img {

    margin-left: 18vw;
    margin-right: 18vw;
    margin-top: 50px;
}
.merchant-products-container ol {
    // grid-column: 2;
    // grid-row: 3;

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: flex-end;

    margin-top: 100px;
    margin-left: 300px;
    margin-right: 300px;
    max-width: 80%;
}
.merchant-products-container li {
    padding: 5px;
    list-style: none;

    text-align: center;
}
.merchant-products-container li a {
    color: hotpink;
}
.merchant-products-container li a:hover {
    color: green;
}

// ---------- Cart page stylying --------
.cart-container {
    display: grid;
    grid-template: 50px 1fr 50px / 15% 1fr 15%;
}
.cart-container h3.cart-heading {
    grid-column: 2;
    grid-row: 1;
    text-align: center;
    margin-top: 20px;
}
.cart-container p.cart-message {
    grid-column: 2;
    grid-row: 1;

    text-align: center;
    font-style: italic;
}
.cart-container img {
    height: 200px;
    width: 200px;

    margin-left: 20px;
    margin-bottom: 10px;
}
.cart-container .item-container {
    grid-column: 2;
    grid-row: 2 / span 2;

    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.cart-container div.item-info {
    // position: relative;
    grid-column: 2;
    grid-row: 2 / span 2;

    border: 1px solid grey;
    margin-top: 50px;
    margin-left: 150px;
    margin-right: 150px;
    max-height: 250px;
    padding-top: 20px;

    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}
.cart-container .checkout {
    grid-column: 2;
    grid-row: 3;

    margin-top: 20px;
}

// ---------- User show page stylying --------

#user-dashboard {
    margin: 3em
}

#user-dashboard-title {
    font-weight: bold
}

.user-dashboard-info {
    border-bottom: black 5px double;
    margin-bottom: 2em
}

